Change the type of PreEnforcer to use DittoHeadersSettable.
Signed-off-by: Yufei Cai <yufei.cai@bosch.io>